# mawt

./: .gitignore  .gitmodules  ArchFlags.txt  CMakeLists.txt  LICENSE.txt  README.md
benchmark/: CMakeLists.txt  bench.sh  benchmark_util.hpp  profile_wt.sh  spacer.hpp
benchmark/benchmark_wt/: CMakeLists.txt  benchmark_execution.hpp  benchmark_large.sh  benchmark_lightweight.sh  benchmark_params.hpp  benchmark_pcc.sh  benchmark_random.hpp  benchmark_read_file.hpp  benchmark_remap_words.hpp  benchmark_results.hpp  benchmark_rng.hpp  benchmark_ru_wb.sh  benchmark_space_measure.sh  benchmark_suffix_array.hpp  benchmark_suffix_array.sh  benchmark_text_processor.hpp  benchmark_wt_main.cpp  test_benchmark.sh  test_benchmark_dd_breakdown.sh  test_benchmark_huff_breakdown_pcc.sh  test_benchmark_huff_breakdown_random.sh  test_benchmark_pcc.sh
benchmark/format/: format_string.hpp
benchmark/log/final/: results-dd-large.out  results-huff-large-mawt.out  results-huff-lightweight-2.out  results-huff-pc-wm-large.out  results-huff-pcc-2.out  results-huff-wc-large-sans-pc-matrix.out  results-kaneta-extrapolated.out  results-large.out  results-lightweight-dd.out  results-lightweight-huff-chr22-gcc-30-jdk13c-rfc-w3c-rctail96.out  results-lightweight-huff-etexthowto-linux-sans-wx-pc.out  results-lightweight-huff-sprot.out  results-lightweight-regular.out  results-pcc-dd.out  results-pcc-huff-pitches-no-wm-pc.out  results-pcc-huff-sans-sources-pitches.out  results-pcc-huff-sources.out  results-pcc-regular.out  results-ru-regular.out  results-ru.out  results-space-dd.out  results-space-reg-huff.out  results-suffix-array.out
benchmark/log/final/plots/: dd-texts-test.tex  dd-texts.tex  huff-time-breakdown.tex  huffman-texts.tex  param-search-huffman-pext.tex  param-search-lut-b.tex  param-search-pext.tex  process.sh  space-measure-dd.tex  space-measure-reg.tex  suffix-array-texts.tex  uncompressed-texts.tex
benchmark/log/final_presentation/: dd-texts.tex  huffman-texts.tex  uncompressed-texts.tex
benchmark/log/plots/: lwt-plots-512-3.tex  lwt-plots-512.tex  out-2022-01-20--11-28-13.out  pcc_plots.tex  pcc_plots_512.tex  pcc_suffix_plots_512.tex  pilot_plots.tex  results-2022-01-21--15-09-49.out  results-2022-03-14--16-33-46.out
benchmark/log/plots/dd-2022-03-26/: lwt-wm-dd-distribution-plots.tex  lwt-wm-dd-plots-grouped-by-size-log.tex  lwt-wm-dd-plots-grouped-by-size.tex  results-2022-03-24--14-26-39.out
benchmark/log/temp/: .gitignore
benchmark/profile/temp/: .gitignore
benchmark/text_analyzer/: CMakeLists.txt  get_text_info.sh  get_text_info_ru.sh  text_analyzer.cpp
benchmark/wrappers/: lwt_wrapper.hpp  lwt_wrapper_dd.hpp  lwt_wrapper_huffman.hpp  wm_wrapper.hpp  wm_wrapper_dd.hpp  wm_wrapper_huffman.hpp  wt_wrapper_dummy.hpp  wt_wrapper_pwm.hpp
demo/: CMakeLists.txt
demo/canonical_codes/: CMakeLists.txt  canonical_code_generator.cpp
demo/result_extrapolator/: CMakeLists.txt  process.sh  result_extrapolator.cpp  results.tex
demo/scratch/: CMakeLists.txt  scratch.cpp
demo/usage_example/: CMakeLists.txt  usage_example.cpp
include/huffman/: huffman_code.hpp  huffman_codes.hpp  huffman_codes_operations.hpp  huffman_encoder.hpp  huffman_tree.hpp
include/util/: bit_util_simd.hpp  bit_util_simd_lut.hpp  bits.hpp  bits_rev_lut.hpp  debug.hpp  random.hpp  time_measure.hpp  timer.hpp
include/vector/: bit_vector.hpp  bit_vector_operations.hpp  indexer.hpp  int_buffer.hpp
include/vector/encoded/: encoded_vector.hpp  encoded_vector_simd.hpp  encoded_vector_writer.hpp
include/vector/packed/: packed_list.hpp  packed_list_simd.hpp  packed_list_writer.hpp  packed_util_simd.hpp  packed_util_simd_lut.hpp
include/wt/: lwt.hpp  lwt_huffman.hpp  lwt_huffman_operations.hpp  lwt_operations.hpp  packed_list_processor.hpp  wm.hpp  wm_huffman.hpp  wm_huffman_operations.hpp  wm_operations.hpp  wt_params.hpp  wt_twophase_lut.hpp
include/wt/encoded/: encoded_compress_shufmask_128_lut.hpp  encoded_compress_shufmask_lut.hpp  encoded_pext_provider.hpp  encoded_shuffle_provider.hpp  encoded_value_compress_lut.hpp  encoded_value_compressor_bit_extract.hpp  encoded_value_compressor_shuffle.hpp  encoded_vector_processor.hpp  packed_enc_data.hpp
include/wt/packed/: packed_bit_util.hpp  packed_bit_util_simd.hpp  packed_data.hpp  packed_pext_provider.hpp  packed_shuffle_provider.hpp  pshufb_shufmask_128_lut.hpp  pshufb_shufmask_lut.hpp
include/wt/parallel/: dd_merge.hpp  dd_merge_bv.hpp  dd_merge_bv_simd.hpp  lwt_dd.hpp  lwt_dd_borders.hpp  wm_dd.hpp  wm_dd_borders.hpp  wt_dd_params.hpp
test/: CMakeLists.txt  test_bit_util_simd.cpp  test_bit_vector.cpp  test_bit_vector_operations.cpp  test_encoding.cpp  test_huffman.cpp  test_int_buffer.cpp  test_lwt_huffman_operations.cpp  test_lwt_operations.cpp  test_lwt_operations_dd.cpp  test_packed_list.cpp  test_packed_list_simd.cpp  test_packed_simd.cpp  test_packed_util_simd.cpp  test_wm_huffman_operations.cpp  test_wm_operations.cpp  test_wm_operations_dd.cpp
test/util/: simd_util.hpp
