# For tests

macro (create_test TESTNAME)
    add_executable (${TESTNAME} ${TESTNAME}.cpp)
    target_include_directories (${TESTNAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
    target_link_libraries (${TESTNAME} gtest_main)
    add_test (NAME ${TESTNAME} COMMAND ${TESTNAME})
endmacro (create_test)

create_test (test_bit_vector)
create_test (test_bit_util_simd)
create_test (test_bit_vector_operations)
create_test (test_encoding)
create_test (test_int_buffer)
create_test (test_huffman)
create_test (test_lwt_operations)
create_test (test_lwt_huffman_operations)
create_test (test_lwt_operations_dd)
create_test (test_packed_list)
create_test (test_packed_list_simd)
create_test (test_packed_simd)
create_test (test_packed_util_simd)
create_test (test_wm_operations)
create_test (test_wm_huffman_operations)
create_test (test_wm_operations_dd)